k8s/base/flask/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: royapp-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: royapp
  template:
    metadata:
      labels:
        app: royapp
    spec:
      containers:
      - name: royapp-container
        image: royapp-flask:v4
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
