k8s/base/flask/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: royapp-service
spec:
  type: ClusterIP 
  selector:
    app: royapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
